methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:12: error: missing arguments for method flower in class FlowerCase;
follow this method with `_' if you want to treat it as a partially applied function
  flower ;     //FLEUR BLEUE
  ^